(library
 (name radatnet)
 (libraries yojson)
 (preprocess (pps ppx_yojson_conv))
 (flags (:standard -w -9-27))
 (ctypes
   (external_library_name "r_core")
   (function_description 
     (concurrency sequential)
     (instance Functions)
     (functor Function_description))
    (type_description 
     (instance Types)
     (functor Type_description))
    (generated_entry_point C)))