(library
 (name radatnet)
 (libraries yojson sexplib)
 (preprocess (pps ppx_yojson_conv ppx_sexp_conv))
; (flags (:standard -w -9-27))
; (ctypes
;   (external_library_name "r_core")
;   (function_description 
;     (concurrency sequential)
;     (instance Functions)
;     (functor Function_description))
;    (type_description 
;     (instance Types)
;     (functor Type_description))
;    (generated_entry_point C))
 (flags (:standard -g)
        ;(-dsource)
        )
 (foreign_stubs
   (language c) 
   (names stubs)
   (flags (:standard -I /usr/include/libr)))
 (c_library_flags (-lr_core)) 
 )
