(library
 (public_name radatnet)
 (name radatnet)
 (libraries yojson ppx_jane core)
 (preprocess
  (pps ppx_yojson_conv ppx_jane))
 ; (flags (:standard -w -9-27))
 ; (ctypes
 ;   (external_library_name "r_core")
 ;   (function_description 
 ;     (concurrency sequential)
 ;     (instance Functions)
 ;     (functor Function_description))
 ;    (type_description 
 ;     (instance Types)
 ;     (functor Type_description))
 ;    (generated_entry_point C))
 (flags
  (:standard -g)
  ;(-dsource)
  )
 (foreign_stubs
  (language c)
  (names stubs)
  (flags
   (:standard -I /usr/include/libr -I /usr/include/capstone)))
 (c_library_flags (-lr_core -lr_util -lr_arch -lr_anal -lr_io)))
